Fixed the mid-scroll jump in a way that doesn't place the todo lists back to back

--- a/src/components/Todo/TodoList.module.css
+++ b/src/components/Todo/TodoList.module.css
@@ -11,12 +11,17 @@
   flex: auto;
 }
 
-.back {
+.container {
   position: relative;
+}
+
+.back {
+  position: absolute;
   z-index: 1;
 }
 
 .front {
+  position: absolute;
   z-index: 2;
   width: 100%;
 }
